--- a/css/style.css
+++ b/css/style.css
@@ -65,8 +65,8 @@ body {
 
 
 h1, h2, h3, h4, h5, h6 {
-  font-weight: bold;
-  font-family: 'Roboto Mono', monospace;
+  
+  font-family: 'Montserrat', sans-serif;
 }
 h1 {
   font-size: 2.21em;
