--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,10 @@ body {
     text-align: left;
     margin: 0;
     color: var(--body-color);
-    font-family: 'Helvetica-Neue', sans-serif;
-    font-size: 12px;
+    font-family: 'Helvetica', 'Arial', sans-serif;
+    color: #444444;
+    font-size: 9pt;
+    background-color: #FAFAFA;
     line-height: 1.6;
     min-width: 320px;
     height: 100%;
